add test for null optional values